ops/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rocket
  labels:
    app.kubernetes.io/part-of: rocket
